# duckdb-cityjson

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN_DOC.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Note.md  README.md  dev_plan.md  extension_config.cmake  vcpkg.json
.claude/: settings.local.json
.cursor/rules/: general.mdc
.github/workflows/: MainDistributionPipeline.yml
.serena/: project.yml
.superset/: config.json
docs/: DESIGN_DOC.md  geometry-encoding-implementation-plan.md  geometry-encoding-spec.md  multi-table-implementation-plan.md
src/: cityjson_extension.cpp
src/cityjson/: bind_data.cpp  bind_function.cpp  city_object_utils.cpp  citygml_parser.cpp  citygml_reader.cpp  cityjson_types.cpp  cityjson_writer.cpp  column_types.cpp  copy_function.cpp  error.cpp  flatcitybuf_reader.cpp  flatcitybuf_table_function.cpp  geometry_properties.cpp  global_state.cpp  init_global.cpp  init_local.cpp  json_utils.cpp  local_citygml_reader.cpp  local_cityjson_reader.cpp  local_cityjsonseq_reader.cpp  local_state.cpp  lod_table.cpp  metadata_table.cpp  metadata_table_function.cpp  optional_callbacks.cpp  reader.cpp  reader_factory.cpp  scan_function.cpp  table_function_registration.cpp  temporal_parser.cpp  types.cpp  vector_writer.cpp  wkb_decoder.cpp  wkb_encoder.cpp
src/include/: cityjson_extension.hpp
src/include/cityjson/: city_object_utils.hpp  citygml_parser.hpp  citygml_reader.hpp  cityjson_types.hpp  cityjson_writer.hpp  column_types.hpp  copy_function.hpp  error.hpp  flatcitybuf_reader.hpp  flatcitybuf_table_function.hpp  geometry_properties.hpp  json_utils.hpp  lod_table.hpp  metadata_table.hpp  metadata_table_function.hpp  reader.hpp  table_function.hpp  temporal_parser.hpp  types.hpp  vector_writer.hpp  wkb_decoder.hpp  wkb_encoder.hpp
test/data/: building_lod2.gml  building_lod2_v3.gml  building_with_parts.city.json  minimal.city.json  minimal.gml  sample.city.jsonl
test/sql/: citygml.test  cityjson.test  cityjson_copy.test  cityjson_e2e_fcb.test  cityjson_e2e_formats.test  cityjson_metadata.test  cityjson_wkb.test  cityjsonseq.test
